{
  "version": 4,
  "terraform_version": "1.3.3",
  "serial": 22,
  "lineage": "6ffb87cb-50c0-d9ce-1a73-04e6a9e3675e",
  "resources": [
    {
      "module": "module.network[\"subnet_1\"]",
      "mode": "data",
      "type": "azurerm_virtual_network",
      "name": "vnetds",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "guid": "07b608ae-4b15-401d-8168-20ec11c12c83",
            "id": "/subscriptions/fec1a8c7-3053-43ab-b51d-9fcc38bd9399/resourceGroups/zgebs-workbench-dev-neu-vnet-rg/providers/Microsoft.Network/virtualNetworks/workbench-dev-neu-vnet",
            "location": "northeurope",
            "name": "workbench-dev-neu-vnet",
            "resource_group_name": "zgebs-workbench-dev-neu-vnet-rg"
          }
        }
      ]
    },
    {
      "module": "module.network[\"subnet_1\"]",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/fec1a8c7-3053-43ab-b51d-9fcc38bd9399/resourceGroups/zgebs-workbench-dev-neu-vnet-rg/providers/Microsoft.Network/networkSecurityGroups/workbench-dev-neu-vnet-nsg1",
            "location": "northeurope",
            "name": "workbench-dev-neu-vnet-nsg1",
            "resource_group_name": "zgebs-workbench-dev-neu-vnet-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "test123",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.data.azurerm_resource_group.networkds"
          ]
        }
      ]
    },
    {
      "module": "module.network[\"subnet_1\"]",
      "mode": "managed",
      "type": "azurerm_route_table",
      "name": "rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "disable_bgp_route_propagation": false,
            "id": "/subscriptions/fec1a8c7-3053-43ab-b51d-9fcc38bd9399/resourceGroups/zgebs-workbench-dev-neu-vnet-rg/providers/Microsoft.Network/routeTables/workbench-dev-neu-vnet-rt1",
            "location": "northeurope",
            "name": "workbench-dev-neu-vnet-rt1",
            "resource_group_name": "zgebs-workbench-dev-neu-vnet-rg",
            "route": [
              {
                "address_prefix": "10.100.0.0/14",
                "name": "example",
                "next_hop_in_ip_address": "10.10.1.1",
                "next_hop_type": "VirtualAppliance"
              }
            ],
            "subnets": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.data.azurerm_resource_group.networkds"
          ]
        }
      ]
    },
    {
      "module": "module.network[\"subnet_1\"]",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "snet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.0.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/fec1a8c7-3053-43ab-b51d-9fcc38bd9399/resourceGroups/zgebs-workbench-dev-neu-vnet-rg/providers/Microsoft.Network/virtualNetworks/workbench-dev-neu-vnet/subnets/zgebs-wb-dey-snet-apim-ne01",
            "name": "zgebs-wb-dey-snet-apim-ne01",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "zgebs-workbench-dev-neu-vnet-rg",
            "virtual_network_name": "workbench-dev-neu-vnet"
          },
          "dependencies": [
            "module.network.data.azurerm_resource_group.networkds",
            "module.network.data.azurerm_virtual_network.vnetds"
          ]
        }
      ]
    },
    {
      "module": "module.network[\"subnet_1\"]",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "snsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/fec1a8c7-3053-43ab-b51d-9fcc38bd9399/resourceGroups/zgebs-workbench-dev-neu-vnet-rg/providers/Microsoft.Network/virtualNetworks/workbench-dev-neu-vnet/subnets/zgebs-wb-dey-snet-apim-ne01",
            "network_security_group_id": "/subscriptions/fec1a8c7-3053-43ab-b51d-9fcc38bd9399/resourceGroups/zgebs-workbench-dev-neu-vnet-rg/providers/Microsoft.Network/networkSecurityGroups/workbench-dev-neu-vnet-nsg1",
            "subnet_id": "/subscriptions/fec1a8c7-3053-43ab-b51d-9fcc38bd9399/resourceGroups/zgebs-workbench-dev-neu-vnet-rg/providers/Microsoft.Network/virtualNetworks/workbench-dev-neu-vnet/subnets/zgebs-wb-dey-snet-apim-ne01"
          },
          "dependencies": [
            "module.network.azurerm_network_security_group.nsg",
            "module.network.azurerm_subnet.snet1",
            "module.network.data.azurerm_resource_group.networkds",
            "module.network.data.azurerm_virtual_network.vnetds"
          ]
        }
      ]
    },
    {
      "module": "module.network[\"subnet_1\"]",
      "mode": "managed",
      "type": "azurerm_subnet_route_table_association",
      "name": "srt",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/fec1a8c7-3053-43ab-b51d-9fcc38bd9399/resourceGroups/zgebs-workbench-dev-neu-vnet-rg/providers/Microsoft.Network/virtualNetworks/workbench-dev-neu-vnet/subnets/zgebs-wb-dey-snet-apim-ne01",
            "route_table_id": "/subscriptions/fec1a8c7-3053-43ab-b51d-9fcc38bd9399/resourceGroups/zgebs-workbench-dev-neu-vnet-rg/providers/Microsoft.Network/routeTables/workbench-dev-neu-vnet-rt1",
            "subnet_id": "/subscriptions/fec1a8c7-3053-43ab-b51d-9fcc38bd9399/resourceGroups/zgebs-workbench-dev-neu-vnet-rg/providers/Microsoft.Network/virtualNetworks/workbench-dev-neu-vnet/subnets/zgebs-wb-dey-snet-apim-ne01"
          },
          "dependencies": [
            "module.network.azurerm_route_table.rt",
            "module.network.azurerm_subnet.snet1",
            "module.network.data.azurerm_resource_group.networkds",
            "module.network.data.azurerm_virtual_network.vnetds"
          ]
        }
      ]
    },
    {
      "module": "module.network[\"subnet_2\"]",
      "mode": "data",
      "type": "azurerm_virtual_network",
      "name": "vnetds",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "guid": "07b608ae-4b15-401d-8168-20ec11c12c83",
            "id": "/subscriptions/fec1a8c7-3053-43ab-b51d-9fcc38bd9399/resourceGroups/zgebs-workbench-dev-neu-vnet-rg/providers/Microsoft.Network/virtualNetworks/workbench-dev-neu-vnet",
            "location": "northeurope",
            "name": "workbench-dev-neu-vnet",
            "resource_group_name": "zgebs-workbench-dev-neu-vnet-rg"
          }
        }
      ]
    },
    {
      "module": "module.network[\"subnet_2\"]",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/fec1a8c7-3053-43ab-b51d-9fcc38bd9399/resourceGroups/zgebs-workbench-dev-neu-vnet-rg/providers/Microsoft.Network/networkSecurityGroups/workbench-dev-neu-vnet-nsg1",
            "location": "northeurope",
            "name": "workbench-dev-neu-vnet-nsg1",
            "resource_group_name": "zgebs-workbench-dev-neu-vnet-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "test123",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.data.azurerm_resource_group.networkds"
          ]
        }
      ]
    },
    {
      "module": "module.network[\"subnet_2\"]",
      "mode": "managed",
      "type": "azurerm_route_table",
      "name": "rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "disable_bgp_route_propagation": false,
            "id": "/subscriptions/fec1a8c7-3053-43ab-b51d-9fcc38bd9399/resourceGroups/zgebs-workbench-dev-neu-vnet-rg/providers/Microsoft.Network/routeTables/workbench-dev-neu-vnet-rt1",
            "location": "northeurope",
            "name": "workbench-dev-neu-vnet-rt1",
            "resource_group_name": "zgebs-workbench-dev-neu-vnet-rg",
            "route": [
              {
                "address_prefix": "10.100.0.0/14",
                "name": "example",
                "next_hop_in_ip_address": "10.10.1.1",
                "next_hop_type": "VirtualAppliance"
              }
            ],
            "subnets": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.data.azurerm_resource_group.networkds"
          ]
        }
      ]
    },
    {
      "module": "module.network[\"subnet_2\"]",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "snet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/fec1a8c7-3053-43ab-b51d-9fcc38bd9399/resourceGroups/zgebs-workbench-dev-neu-vnet-rg/providers/Microsoft.Network/virtualNetworks/workbench-dev-neu-vnet/subnets/zgebs-wb-dev-snet-shared-ne01",
            "name": "zgebs-wb-dev-snet-shared-ne01",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "zgebs-workbench-dev-neu-vnet-rg",
            "virtual_network_name": "workbench-dev-neu-vnet"
          },
          "dependencies": [
            "module.network.data.azurerm_resource_group.networkds",
            "module.network.data.azurerm_virtual_network.vnetds"
          ]
        }
      ]
    },
    {
      "module": "module.network[\"subnet_2\"]",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "snsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/fec1a8c7-3053-43ab-b51d-9fcc38bd9399/resourceGroups/zgebs-workbench-dev-neu-vnet-rg/providers/Microsoft.Network/virtualNetworks/workbench-dev-neu-vnet/subnets/zgebs-wb-dev-snet-shared-ne01",
            "network_security_group_id": "/subscriptions/fec1a8c7-3053-43ab-b51d-9fcc38bd9399/resourceGroups/zgebs-workbench-dev-neu-vnet-rg/providers/Microsoft.Network/networkSecurityGroups/workbench-dev-neu-vnet-nsg1",
            "subnet_id": "/subscriptions/fec1a8c7-3053-43ab-b51d-9fcc38bd9399/resourceGroups/zgebs-workbench-dev-neu-vnet-rg/providers/Microsoft.Network/virtualNetworks/workbench-dev-neu-vnet/subnets/zgebs-wb-dev-snet-shared-ne01"
          },
          "dependencies": [
            "module.network.azurerm_network_security_group.nsg",
            "module.network.azurerm_subnet.snet1",
            "module.network.data.azurerm_resource_group.networkds",
            "module.network.data.azurerm_virtual_network.vnetds"
          ]
        }
      ]
    },
    {
      "module": "module.network[\"subnet_2\"]",
      "mode": "managed",
      "type": "azurerm_subnet_route_table_association",
      "name": "srt",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/fec1a8c7-3053-43ab-b51d-9fcc38bd9399/resourceGroups/zgebs-workbench-dev-neu-vnet-rg/providers/Microsoft.Network/virtualNetworks/workbench-dev-neu-vnet/subnets/zgebs-wb-dev-snet-shared-ne01",
            "route_table_id": "/subscriptions/fec1a8c7-3053-43ab-b51d-9fcc38bd9399/resourceGroups/zgebs-workbench-dev-neu-vnet-rg/providers/Microsoft.Network/routeTables/workbench-dev-neu-vnet-rt1",
            "subnet_id": "/subscriptions/fec1a8c7-3053-43ab-b51d-9fcc38bd9399/resourceGroups/zgebs-workbench-dev-neu-vnet-rg/providers/Microsoft.Network/virtualNetworks/workbench-dev-neu-vnet/subnets/zgebs-wb-dev-snet-shared-ne01"
          },
          "dependencies": [
            "module.network.azurerm_route_table.rt",
            "module.network.azurerm_subnet.snet1",
            "module.network.data.azurerm_resource_group.networkds",
            "module.network.data.azurerm_virtual_network.vnetds"
          ]
        }
      ]
    },
    {
      "module": "module.network[\"subnet_3\"]",
      "mode": "data",
      "type": "azurerm_virtual_network",
      "name": "vnetds",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "guid": "07b608ae-4b15-401d-8168-20ec11c12c83",
            "id": "/subscriptions/fec1a8c7-3053-43ab-b51d-9fcc38bd9399/resourceGroups/zgebs-workbench-dev-neu-vnet-rg/providers/Microsoft.Network/virtualNetworks/workbench-dev-neu-vnet",
            "location": "northeurope",
            "name": "workbench-dev-neu-vnet",
            "resource_group_name": "zgebs-workbench-dev-neu-vnet-rg"
          }
        }
      ]
    },
    {
      "module": "module.network[\"subnet_3\"]",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/fec1a8c7-3053-43ab-b51d-9fcc38bd9399/resourceGroups/zgebs-workbench-dev-neu-vnet-rg/providers/Microsoft.Network/networkSecurityGroups/workbench-dev-neu-vnet-nsg1",
            "location": "northeurope",
            "name": "workbench-dev-neu-vnet-nsg1",
            "resource_group_name": "zgebs-workbench-dev-neu-vnet-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "test123",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.data.azurerm_resource_group.networkds"
          ]
        }
      ]
    },
    {
      "module": "module.network[\"subnet_3\"]",
      "mode": "managed",
      "type": "azurerm_route_table",
      "name": "rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "disable_bgp_route_propagation": false,
            "id": "/subscriptions/fec1a8c7-3053-43ab-b51d-9fcc38bd9399/resourceGroups/zgebs-workbench-dev-neu-vnet-rg/providers/Microsoft.Network/routeTables/workbench-dev-neu-vnet-rt1",
            "location": "northeurope",
            "name": "workbench-dev-neu-vnet-rt1",
            "resource_group_name": "zgebs-workbench-dev-neu-vnet-rg",
            "route": [
              {
                "address_prefix": "10.100.0.0/14",
                "name": "example",
                "next_hop_in_ip_address": "10.10.1.1",
                "next_hop_type": "VirtualAppliance"
              }
            ],
            "subnets": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.data.azurerm_resource_group.networkds"
          ]
        }
      ]
    },
    {
      "module": "module.network[\"subnet_3\"]",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "snet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.3.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/fec1a8c7-3053-43ab-b51d-9fcc38bd9399/resourceGroups/zgebs-workbench-dev-neu-vnet-rg/providers/Microsoft.Network/virtualNetworks/workbench-dev-neu-vnet/subnets/zgebs-wb-dev-snet-webout-ne01",
            "name": "zgebs-wb-dev-snet-webout-ne01",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "zgebs-workbench-dev-neu-vnet-rg",
            "virtual_network_name": "workbench-dev-neu-vnet"
          },
          "dependencies": [
            "module.network.data.azurerm_resource_group.networkds",
            "module.network.data.azurerm_virtual_network.vnetds"
          ]
        }
      ]
    },
    {
      "module": "module.network[\"subnet_3\"]",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "snsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/fec1a8c7-3053-43ab-b51d-9fcc38bd9399/resourceGroups/zgebs-workbench-dev-neu-vnet-rg/providers/Microsoft.Network/virtualNetworks/workbench-dev-neu-vnet/subnets/zgebs-wb-dev-snet-webout-ne01",
            "network_security_group_id": "/subscriptions/fec1a8c7-3053-43ab-b51d-9fcc38bd9399/resourceGroups/zgebs-workbench-dev-neu-vnet-rg/providers/Microsoft.Network/networkSecurityGroups/workbench-dev-neu-vnet-nsg1",
            "subnet_id": "/subscriptions/fec1a8c7-3053-43ab-b51d-9fcc38bd9399/resourceGroups/zgebs-workbench-dev-neu-vnet-rg/providers/Microsoft.Network/virtualNetworks/workbench-dev-neu-vnet/subnets/zgebs-wb-dev-snet-webout-ne01"
          },
          "dependencies": [
            "module.network.azurerm_network_security_group.nsg",
            "module.network.azurerm_subnet.snet1",
            "module.network.data.azurerm_resource_group.networkds",
            "module.network.data.azurerm_virtual_network.vnetds"
          ]
        }
      ]
    },
    {
      "module": "module.network[\"subnet_3\"]",
      "mode": "managed",
      "type": "azurerm_subnet_route_table_association",
      "name": "srt",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/fec1a8c7-3053-43ab-b51d-9fcc38bd9399/resourceGroups/zgebs-workbench-dev-neu-vnet-rg/providers/Microsoft.Network/virtualNetworks/workbench-dev-neu-vnet/subnets/zgebs-wb-dev-snet-webout-ne01",
            "route_table_id": "/subscriptions/fec1a8c7-3053-43ab-b51d-9fcc38bd9399/resourceGroups/zgebs-workbench-dev-neu-vnet-rg/providers/Microsoft.Network/routeTables/workbench-dev-neu-vnet-rt1",
            "subnet_id": "/subscriptions/fec1a8c7-3053-43ab-b51d-9fcc38bd9399/resourceGroups/zgebs-workbench-dev-neu-vnet-rg/providers/Microsoft.Network/virtualNetworks/workbench-dev-neu-vnet/subnets/zgebs-wb-dev-snet-webout-ne01"
          },
          "dependencies": [
            "module.network.azurerm_route_table.rt",
            "module.network.azurerm_subnet.snet1",
            "module.network.data.azurerm_resource_group.networkds",
            "module.network.data.azurerm_virtual_network.vnetds"
          ]
        }
      ]
    },
    {
      "module": "module.network[\"subnet_4\"]",
      "mode": "data",
      "type": "azurerm_virtual_network",
      "name": "vnetds",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "guid": "07b608ae-4b15-401d-8168-20ec11c12c83",
            "id": "/subscriptions/fec1a8c7-3053-43ab-b51d-9fcc38bd9399/resourceGroups/zgebs-workbench-dev-neu-vnet-rg/providers/Microsoft.Network/virtualNetworks/workbench-dev-neu-vnet",
            "location": "northeurope",
            "name": "workbench-dev-neu-vnet",
            "resource_group_name": "zgebs-workbench-dev-neu-vnet-rg"
          }
        }
      ]
    },
    {
      "module": "module.network[\"subnet_4\"]",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/fec1a8c7-3053-43ab-b51d-9fcc38bd9399/resourceGroups/zgebs-workbench-dev-neu-vnet-rg/providers/Microsoft.Network/networkSecurityGroups/workbench-dev-neu-vnet-nsg1",
            "location": "northeurope",
            "name": "workbench-dev-neu-vnet-nsg1",
            "resource_group_name": "zgebs-workbench-dev-neu-vnet-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "test123",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.data.azurerm_resource_group.networkds"
          ]
        }
      ]
    },
    {
      "module": "module.network[\"subnet_4\"]",
      "mode": "managed",
      "type": "azurerm_route_table",
      "name": "rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "disable_bgp_route_propagation": false,
            "id": "/subscriptions/fec1a8c7-3053-43ab-b51d-9fcc38bd9399/resourceGroups/zgebs-workbench-dev-neu-vnet-rg/providers/Microsoft.Network/routeTables/workbench-dev-neu-vnet-rt1",
            "location": "northeurope",
            "name": "workbench-dev-neu-vnet-rt1",
            "resource_group_name": "zgebs-workbench-dev-neu-vnet-rg",
            "route": [
              {
                "address_prefix": "10.100.0.0/14",
                "name": "example",
                "next_hop_in_ip_address": "10.10.1.1",
                "next_hop_type": "VirtualAppliance"
              }
            ],
            "subnets": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.data.azurerm_resource_group.networkds"
          ]
        }
      ]
    },
    {
      "module": "module.network[\"subnet_4\"]",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "snet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.4.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/fec1a8c7-3053-43ab-b51d-9fcc38bd9399/resourceGroups/zgebs-workbench-dev-neu-vnet-rg/providers/Microsoft.Network/virtualNetworks/workbench-dev-neu-vnet/subnets/zgebs-wb-dev-snet-webin-ne01",
            "name": "zgebs-wb-dev-snet-webin-ne01",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "zgebs-workbench-dev-neu-vnet-rg",
            "virtual_network_name": "workbench-dev-neu-vnet"
          },
          "dependencies": [
            "module.network.data.azurerm_resource_group.networkds",
            "module.network.data.azurerm_virtual_network.vnetds"
          ]
        }
      ]
    },
    {
      "module": "module.network[\"subnet_4\"]",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "snsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/fec1a8c7-3053-43ab-b51d-9fcc38bd9399/resourceGroups/zgebs-workbench-dev-neu-vnet-rg/providers/Microsoft.Network/virtualNetworks/workbench-dev-neu-vnet/subnets/zgebs-wb-dev-snet-webin-ne01",
            "network_security_group_id": "/subscriptions/fec1a8c7-3053-43ab-b51d-9fcc38bd9399/resourceGroups/zgebs-workbench-dev-neu-vnet-rg/providers/Microsoft.Network/networkSecurityGroups/workbench-dev-neu-vnet-nsg1",
            "subnet_id": "/subscriptions/fec1a8c7-3053-43ab-b51d-9fcc38bd9399/resourceGroups/zgebs-workbench-dev-neu-vnet-rg/providers/Microsoft.Network/virtualNetworks/workbench-dev-neu-vnet/subnets/zgebs-wb-dev-snet-webin-ne01"
          },
          "dependencies": [
            "module.network.azurerm_network_security_group.nsg",
            "module.network.azurerm_subnet.snet1",
            "module.network.data.azurerm_resource_group.networkds",
            "module.network.data.azurerm_virtual_network.vnetds"
          ]
        }
      ]
    },
    {
      "module": "module.network[\"subnet_4\"]",
      "mode": "managed",
      "type": "azurerm_subnet_route_table_association",
      "name": "srt",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/fec1a8c7-3053-43ab-b51d-9fcc38bd9399/resourceGroups/zgebs-workbench-dev-neu-vnet-rg/providers/Microsoft.Network/virtualNetworks/workbench-dev-neu-vnet/subnets/zgebs-wb-dev-snet-webin-ne01",
            "route_table_id": "/subscriptions/fec1a8c7-3053-43ab-b51d-9fcc38bd9399/resourceGroups/zgebs-workbench-dev-neu-vnet-rg/providers/Microsoft.Network/routeTables/workbench-dev-neu-vnet-rt1",
            "subnet_id": "/subscriptions/fec1a8c7-3053-43ab-b51d-9fcc38bd9399/resourceGroups/zgebs-workbench-dev-neu-vnet-rg/providers/Microsoft.Network/virtualNetworks/workbench-dev-neu-vnet/subnets/zgebs-wb-dev-snet-webin-ne01"
          },
          "dependencies": [
            "module.network.azurerm_route_table.rt",
            "module.network.azurerm_subnet.snet1",
            "module.network.data.azurerm_resource_group.networkds",
            "module.network.data.azurerm_virtual_network.vnetds"
          ]
        }
      ]
    },
    {
      "module": "module.network_main",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]"
    }
  ]
}